[package]
name = "ruckpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
derive_builder = "0.12.0"
serde = { version = "1.0.190", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
