[package]
name = "ruckpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
derive_builder = "0.12.0"
http = "0.2.9"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
